Bug 157795 - FILESAVE: PDF: Incorrect transparency around image
Summary: FILESAVE: PDF: Incorrect transparency around image
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Patrick (volunteer)
URL:
Whiteboard: target:24.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2023-10-16 12:09 UTC by Xisco Faulí
Modified: 2023-10-25 10:28 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
pdf output (133.94 KB, application/pdf)
2023-10-16 12:09 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-10-16 12:09:39 UTC
Created attachment 190238 [details]
pdf output

Steps to reproduce:
1. Open attachment 128211 [details] from bug 103473
2. Save to PDF

-> The generated PDF has a wrong rendering. See attached file

Reproduced with

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 3649dc202bedf72e37c77993a1f7027bfdfc6d9e
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2023-10-16 12:10:31 UTC
Regression introduced by:

author	Noel Grandin <noelgrandin@gmail.com>	2021-04-16 20:33:10 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2023-07-25 08:38:12 +0200
commit 81994cb2b8b32453a92bcb011830fcb884f22ff3 (patch)
tree ae1750e92421ad2e0ec3f50351c3be6581841598
parent dabedcaf27b0af1e38a611b8d8e48444f848e01d (diff)
Convert internal vcl bitmap formats transparency->alpha (II)

Bisected with: bibisect-linux64-24.2

Adding Cc: to Noel Grandin
Comment 2 Patrick (volunteer) 2023-10-22 00:23:10 UTC
The bug goes away when rotation of the image is set to 0 degrees. So, I will try to find the code that handles image rotation when exporting to PDF.
Comment 3 Commit Notification 2023-10-23 16:29:39 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d8ec731e613d840dc7550a3468110a69fd5280e4

tdf#157795 set color to black outside of of bitmap bounds

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2023-10-25 10:28:19 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/33f158d96c5782a862345736bc6561afe3d583b5

tdf#157795: sd_png_export: Add unittest

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.