tdf#157795 set color to black outside of of bitmap bounds

Due to commit 81994cb2b8b32453a92bcb011830fcb884f22ff3,
transparent areas are now black instead of white.

Change-Id: I9456bb2603d4968a5d5df0a7bdbff48ce9a8e2f4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/158355
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Jenkins
Reviewed-by: Patrick Luby <plubius@neooffice.org>